--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-streamlit==0.88.0
-scikit-learn==0.24.2
-pandas==1.3.3
-numpy==1.21.2
+streamlit
+pandas
+numpy
+keras
+yfinance
+plotly
+ta
+scikit-learn
